--- a/samples/android/BeaconServiceDemoApp/app/src/main/AndroidManifest.xml
+++ b/samples/android/BeaconServiceDemoApp/app/src/main/AndroidManifest.xml
@@ -26,8 +26,8 @@
 
     <!-- Required for the Static Maps API used here to display the registered location
          of the beacon -->
-    <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="AIzaSyCa8xRLl3CGQbBi5ZbhJ8g0OaoyYd0zoLc"/>
+    <meta-data android:name="com.google.android.geo.API"
+               android:value="AIzaSyAv6l1wZ1Fdo9yJTg3AaZgjHTSCZK1Rq4Y"/>
     <activity
         android:name=".MainActivity"
         android:screenOrientation="portrait"
