--- a/samples/android/BeaconServiceDemoApp/libproximitybeacon/build.gradle
+++ b/samples/android/BeaconServiceDemoApp/libproximitybeacon/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 24
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
-        minSdkVersion 22
-        targetSdkVersion 22
+        minSdkVersion 14
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
@@ -19,7 +19,7 @@ android {
 }
 
 dependencies {
-    compile 'com.google.android.gms:play-services:7.5.0'
-    compile 'com.squareup.okhttp:okhttp:2.4.0'
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.squareup.okhttp:okhttp:2.4.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.google.android.gms:play-services:7.5.0'
 }
